--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -52,23 +52,29 @@
                 <a class="navbar-brand" href="/">Início</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <li>
                         <a href="{{ app.url_generator.generate('areaRestrita') }}">Área restrita</a>
                     </li>
+                    {% endif %}
                     <li>
                         <a href="{{ app.url_generator.generate('nossoImpacto') }}">Nosso impacto</a>
                     </li>
                     <li>
                         <a href="{{ app.url_generator.generate('contato') }}">Contato</a>
                     </li>
+                    <li>
+                    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a href="{{ app.url_generator.generate('logout') }}">Sair</a>
+                    {% else %}
+                        <a href="{{ app.url_generator.generate('login') }}">Acessar</a>
+                    {% endif %}
+                    </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
 {% block topo %}
@@ -77,7 +83,7 @@
     <header class="intro-header" style="background-image: url('{{ asset('about-bg.jpg', 'img') }}')">
         <div class="container" style="background-color: rgb(0, 0, 0); opacity: 0.5; width: 100%; height: 100%;">
             <div class="row">
-                <div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-0">
+                <div class="col-sm-12 col-sm-offset-0">
                     <div class="site-heading">
                         <h1>Casa São José</h1>
                         <hr class="small">
@@ -102,7 +108,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="col-sm-8 col-sm-offset-2">
                 <p class="copyright text-muted">Nossos contatos</p>
                 <ul class="list-inline text-center">
                     <li>
