--- a/web/view/login.twig
+++ b/web/view/login.twig
@@ -3,7 +3,7 @@
 {% block conteudo %}
 <div class="container">
     <div class="row col-sm-8 col-sm-offset-2">
-        <form class="form-signin" name="frmLogin" action="{{ path('restrito_autorizacao')}}">
+        <form name="frmLogin" action="{{ path('autenticacao')}}" method="POST">
             <h4 class="form-signin-heading col-sm-6 col-sm-offset-4">Já é cadastrado?</h4>
             <div class="form-group col-sm-6 col-sm-offset-4">
                 <label for="email" class="sr-only">Email</label>
