--- a/web/view/login.twig
+++ b/web/view/login.twig
@@ -3,7 +3,7 @@
 {% block conteudo %}
 <div class="container">
     <div class="row col-sm-8 col-sm-offset-2">
-        <form name="frmLogin" action="{{ path('autenticacao')}}" method="POST">
+        <form name="frmLogin" action="{{ path('restrito_autenticacao')}}" method="POST">
             <h4 class="form-signin-heading col-sm-6 col-sm-offset-4">Já é cadastrado?</h4>
             <div class="form-group col-sm-6 col-sm-offset-4">
                 <label for="email" class="sr-only">Email</label>
@@ -17,7 +17,7 @@
                 <button type="submit" class="btn btn-primary">
                     <i class="glyphicon glyphicon-ok"> Acessar</i>
                 </button>
-                <button type="button" class="btn btn-default">
+                <button type="reset" class="btn btn-default">
                     <i class="glyphicon glyphicon-remove"> Limpar</i>
                 </button>
             </div>
