--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -106,41 +106,7 @@
 {% block contato %}
 <!-- Footer -->
 <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <p class="copyright text-muted">Nossos contatos</p>
-                <ul class="list-inline text-center">
-                    <li>
-                        <a href="https://www.facebook.com/casa-sao-jose/">
-                            <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                            </span>Facebook
-                        </a>
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-lg">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="glyphicon glyphicon-envelope fa-stack-1x fa-inverse"></i>
-                        </span>aclnsaojose13@gmail.com
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-lg">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="glyphicon glyphicon-envelope fa-stack-1x fa-inverse"></i>
-                        </span>(61) 3468-1949 / 98642-1260
-                    </li>
-                    <li>
-                        <span class="fa-stack fa-lg">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="glyphicon glyphicon-map-marker fa-stack-1x fa-inverse"></i>
-                        </span>Quadra 01 Conjunto D Lote 03, Varjão - DF
-                    </li>                    
-                </ul>
-            </div>
-        </div>
-    </div>
+    <p class="copyright text-muted">Associação Cristã do Lago Norte - ACLN - 2018</p>
 </footer>
 {% endblock %}
     <!-- jQuery -->
