--- a/web/view/contato.twig
+++ b/web/view/contato.twig
@@ -10,21 +10,21 @@
         </div>
         <div class="row col-sm-8 col-sm-offset-2">
         <form name="frmContato" action="" method="POST" class="form-inline">
-            <div class="form-group col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <div class="form-group col-sm-4">
                 <label for="nome" class="sr-only">Nome</label>
-                <input type="text" name="nome" class="form-control col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" placeholder="Nome" required data-validation-required-message="Por favor informe seu nome" autofocus>
+                <input type="text" name="nome" class="form-control" placeholder="Nome" required data-validation-required-message="Por favor informe seu nome" autofocus>
             </div>
-            <div class="form-group col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <div class="form-group col-sm-4">
                 <label for="email" class="sr-only">Email</label>
-                <input type="email" name="email" class="form-control col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" placeholder="Email" required data-validation-required-message="Por favor informe seu email">
+                <input type="email" name="email" class="form-control" placeholder="Email" required data-validation-required-message="Por favor informe seu email">
             </div>
-            <div class="form-group col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+            <div class="form-group col-sm-4">
                 <label for="celular" class="sr-only">Celular</label>
-                <input type="tel" name="celular" class="form-control col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" placeholder="Celular" required data-validation-required-message="Por favor informe seu celular para tirarmos dúvidas">
+                <input type="tel" name="celular" class="form-control" placeholder="Celular" required data-validation-required-message="Por favor informe seu celular para tirarmos dúvidas">
             </div>
-            <div class="form-group col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="form-group col-sm-12">
                 <label for="mensagem" class="sr-only">Mensagem</label>
-                <textarea rows="5" name="mensagem" class="form-control col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" placeholder="Mensagem" required data-validation-required-message="Esqueceu a mensagem"></textarea>
+                <textarea rows="5" name="mensagem" class="form-control" placeholder="Mensagem" required data-validation-required-message="Esqueceu a mensagem"></textarea>
             </div>
             <!--<div class="checkbox">
                 <label><input type="checkbox" value="remember-me"> Remember me</label>
